--- a/proposal.qmd
+++ b/proposal.qmd
@@ -70,9 +70,9 @@ df_test.columns = columns
 print('Shapes (train, test):', df_train.shape, df_test.shape)
 ```
 
-We are using training and testing network intrusion detection datasets from [NSL-KDD from Kaggle](https://www.kaggle.com/datasets/hassan06/nslkdd/data?select=KDDTrain1.jpg). The training dataset contains **125,972 rows** and **43 columns** of intrusion detection network traffic and **22,543 rows** and **43 columns** in the test dataset. 
+We are using a training and testing dataset of network intrusion detection from [NSL-KDD from Kaggle](https://www.kaggle.com/datasets/hassan06/nslkdd/data?select=KDDTrain1.jpg). The intrusion detection network traffic training dataset contains **125,972 rows** and **43 columns**, and **22,543 rows** and **43 columns** in the test dataset.
 
-The `attack` field indicates normal or anomalous (multi-class) observations which allows us to use learning approaches for classifying anomalous network activity. A new binary classification field, `is_anomalous` will be added indicating if the newtork connection was anomalous or not. This will be the target field of the project.
+The `attack` field indicates normal or anomalous (multi-class) observations which allows us to use learning approaches for classifying anomalous network activity. A new binary classification feature, `is_anomalous`, will be added to indicate if the network connection was anomalous or not. This will be the target field for the project.
 
 We chose this dataset because it provides a rich and realistic representation of network traffic data. The presence of labeled data allows us to train and evaluate supervised models; the diversity and volume of traffic patterns make it well-suited for exploring unsupervised anomaly detection techniques as well. This balance between complexity and feature richness aligns well with our research questions and modeling goals.
 
@@ -88,56 +88,55 @@ Summary. How do the supervised and unsupervised approaches compare?
 
 ### Variables
 
-| Column Name                  | Data Type | Description                                                                 |
-|-----------------------------|-----------|-----------------------------------------------------------------------------|
-| `duration`                  | int64     | Length (in seconds) of the connection.                                      |
-| `protocol_type`             | object    | Protocol used (e.g., tcp, udp, icmp).                                       |
-| `service`                   | object    | Network service on the destination (e.g., http, telnet).                    |
-| `flag`                      | object    | Status flag of the connection.                                              |
-| `src_bytes`                 | int64     | Number of data bytes sent from source to destination.                       |
-| `dst_bytes`                 | int64     | Number of data bytes sent from destination to source.                       |
-| `land`                      | int64     | 1 if connection is from/to the same host/port; 0 otherwise.                 |
-| `wrong_fragment`            | int64     | Number of wrong fragments.                                                  |
-| `urgent`                    | int64     | Number of urgent packets.                                                   |
-| `hot`                       | int64     | Number of "hot" indicators.                                                 |
-| `num_failed_logins`         | int64     | Number of failed login attempts.                                            |
-| `logged_in`                 | int64     | 1 if successfully logged in; 0 otherwise.                                   |
-| `num_compromised`           | int64     | Number of compromised conditions.                                           |
-| `root_shell`                | int64     | 1 if root shell is obtained; 0 otherwise.                                   |
-| `su_attempted`              | int64     | 1 if "su root" command attempted; 0 otherwise.                              |
-| `num_root`                  | int64     | Number of "root" accesses.                                                  |
-| `num_file_creations`        | int64     | Number of file creation operations.                                         |
-| `num_shells`                | int64     | Number of shell prompts invoked.                                            |
-| `num_access_files`          | int64     | Number of accesses to control files.                                        |
-| `num_outbound_cmds`         | int64     | Number of outbound commands (always 0 in KDD99).                            |
-| `is_host_login`             | int64     | 1 if login is to a host account; 0 otherwise.                               |
-| `is_guest_login`            | int64     | 1 if login is to a guest account; 0 otherwise.                              |
-| `count`                     | int64     | Number of connections to the same host in the past 2 seconds.              |
-| `srv_count`                 | int64     | Number of connections to the same service in the past 2 seconds.           |
-| `serror_rate`               | float64   | % of connections with SYN errors.                                           |
-| `srv_serror_rate`           | float64   | % of connections to the same service with SYN errors.                       |
-| `rerror_rate`               | float64   | % of connections with REJ errors.                                           |
-| `srv_rerror_rate`           | float64   | % of connections to the same service with REJ errors.                       |
-| `same_srv_rate`             | float64   | % of connections to the same service.                                       |
-| `diff_srv_rate`             | float64   | % of connections to different services.                                     |
-| `srv_diff_host_rate`        | float64   | % of connections to different hosts on the same service.                    |
-| `dst_host_count`            | int64     | Number of connections to the destination host.                              |
-| `dst_host_srv_count`        | int64     | Number of connections to the destination host and service.                 |
-| `dst_host_same_srv_rate`    | float64   | % of connections to the same service on the destination host.               |
-| `dst_host_diff_srv_rate`    | float64   | % of connections to different services on the destination host.             |
-| `dst_host_same_src_port_rate` | float64 | % of connections from the same source port.                                 |
-| `dst_host_srv_diff_host_rate` | float64 | % of connections to the same service from different hosts.                  |
-| `dst_host_serror_rate`      | float64   | % of connections with SYN errors to the destination host.                   |
-| `dst_host_srv_serror_rate`  | float64   | % of connections with SYN errors to the destination service.                |
-| `dst_host_rerror_rate`      | float64   | % of connections with REJ errors to the destination host.                   |
-| `dst_host_srv_rerror_rate`  | float64   | % of connections with REJ errors to the destination service.                |
-| `attack`                    | object    | Label indicating the type of attack or "normal".                            |
-| `level`                     | int64     | Severity or confidence score of the attack (if available).                  |
-
+| Column Name | Data Type | Description |
+|---------------|---------------|-------------------------------------------|
+| `duration` | int64 | Length (in seconds) of the connection. |
+| `protocol_type` | object | Protocol used (e.g., tcp, udp, icmp). |
+| `service` | object | Network service on the destination (e.g., http, telnet). |
+| `flag` | object | Status flag of the connection. |
+| `src_bytes` | int64 | Number of data bytes sent from source to destination. |
+| `dst_bytes` | int64 | Number of data bytes sent from destination to source. |
+| `land` | int64 | 1 if connection is from/to the same host/port; 0 otherwise. |
+| `wrong_fragment` | int64 | Number of wrong fragments. |
+| `urgent` | int64 | Number of urgent packets. |
+| `hot` | int64 | Number of "hot" indicators. |
+| `num_failed_logins` | int64 | Number of failed login attempts. |
+| `logged_in` | int64 | 1 if successfully logged in; 0 otherwise. |
+| `num_compromised` | int64 | Number of compromised conditions. |
+| `root_shell` | int64 | 1 if root shell is obtained; 0 otherwise. |
+| `su_attempted` | int64 | 1 if "su root" command attempted; 0 otherwise. |
+| `num_root` | int64 | Number of "root" accesses. |
+| `num_file_creations` | int64 | Number of file creation operations. |
+| `num_shells` | int64 | Number of shell prompts invoked. |
+| `num_access_files` | int64 | Number of accesses to control files. |
+| `num_outbound_cmds` | int64 | Number of outbound commands (always 0 in KDD99). |
+| `is_host_login` | int64 | 1 if login is to a host account; 0 otherwise. |
+| `is_guest_login` | int64 | 1 if login is to a guest account; 0 otherwise. |
+| `count` | int64 | Number of connections to the same host in the past 2 seconds. |
+| `srv_count` | int64 | Number of connections to the same service in the past 2 seconds. |
+| `serror_rate` | float64 | \% of connections with SYN errors. |
+| `srv_serror_rate` | float64 | \% of connections to the same service with SYN errors. |
+| `rerror_rate` | float64 | \% of connections with REJ errors. |
+| `srv_rerror_rate` | float64 | \% of connections to the same service with REJ errors. |
+| `same_srv_rate` | float64 | \% of connections to the same service. |
+| `diff_srv_rate` | float64 | \% of connections to different services. |
+| `srv_diff_host_rate` | float64 | \% of connections to different hosts on the same service. |
+| `dst_host_count` | int64 | Number of connections to the destination host. |
+| `dst_host_srv_count` | int64 | Number of connections to the destination host and service. |
+| `dst_host_same_srv_rate` | float64 | \% of connections to the same service on the destination host. |
+| `dst_host_diff_srv_rate` | float64 | \% of connections to different services on the destination host. |
+| `dst_host_same_src_port_rate` | float64 | \% of connections from the same source port. |
+| `dst_host_srv_diff_host_rate` | float64 | \% of connections to the same service from different hosts. |
+| `dst_host_serror_rate` | float64 | \% of connections with SYN errors to the destination host. |
+| `dst_host_srv_serror_rate` | float64 | \% of connections with SYN errors to the destination service. |
+| `dst_host_rerror_rate` | float64 | \% of connections with REJ errors to the destination host. |
+| `dst_host_srv_rerror_rate` | float64 | \% of connections with REJ errors to the destination service. |
+| `attack` | object | Label indicating the type of attack or "normal". |
+| `level` | int64 | Severity or confidence score of the attack (if available). |
 
 ### Exploratory Data Analysis
 
-We take a quick look at the training data to see if the data is telling anything right away.
+We take a quick look at the training data to see if there are any obvious imbalances.
 
 ```{python}
 #| label: Exploratory Data Analysis
@@ -151,10 +150,9 @@ print("Attack label distribution:\n", df_train['attack'].value_counts().head(5))
 df_train.info(verbose=False)
 ```
 
+The brief look at the data is positive. There are plenty of data points and features, depending on time speeds for fitting models, we may decrease our sample size because hyper parameter using GridSearchCV training may be time intensive. In the data there are no missing values, and the glimpse of the `attack` column provides insight into why we want to collapse it into a binary column.
 
-The brief look at the data is positive. There are plenty of data points and features to work with, in fact we may end up taking a sample because hyper parameter trining may be time intensive. In the data there are no missing values, and the glimpse of the `attack` column provides insight into why we want to collapse it into a binary column.
-
-## Normal vs Anomalous Traffic
+### Normal vs Anomalous Traffic
 
 First, look at the amount of normal v. anomalous data.
 
@@ -193,22 +191,20 @@ print(df_train['attack'].value_counts())
 
 ```
 
-The plot provides an idea of the specific attack types expressesd in the data. The plot communicates why it makes sense to group all non-normal traffic together. 
+The plot provides an idea of the specific attack types expressesd in the data. The plot communicates why it makes sense to group all non-normal traffic together.
 
-A new column, `is_anomalous` is created containing 0 if the connection is normal and 1 if the connection is not normal.
+We feature engineer a new column, `is_anomalous`, this contains 0 if the connection is normal and 1 if the connection is not normal.
 
 ```{python}
-
+#| label: feature-engineering
 # create binary target column: 1 = attack, 0 = normal
 
 df_train['is_anomalous'] = df_train['attack'].apply(
   lambda x: 0 if x == 'normal' else 1)
 
-df_test['is_anomalous'] = df_test['attack'].apply(
-  lambda x: 0 if x == 'normal' else 1)
 ```
 
-Examine the new columns to get an idea of the target balance.
+Examine the new column, `is_anaomalous`, to get an idea of the target frequency.
 
 ```{python}
 #| label: countplot-anomalous
@@ -218,7 +214,11 @@ Examine the new columns to get an idea of the target balance.
 
 plt.figure(figsize = (10, 6))
 
-ax = sns.countplot(x = 'is_anomalous', data = df_train, palette = "Set2", hue = "is_anomalous")
+ax = sns.countplot(x = 'is_anomalous', 
+                   data = df_train, 
+                   palette = "Set2", 
+                   hue = "is_anomalous"
+                  )
 plt.xticks([0, 1], ['Normal (0)', 'Anomalous (1)'])
 plt.xlabel('Network Traffic Type')
 plt.ylabel('Count')
@@ -244,7 +244,6 @@ summary_table
 
 The `is_anomalous` classification target shows a near-even class distribution indicating the the dataset is well balanced. There should be no need for resampling or class weighting to correct the set. It appears this dataset will be a good candidate for learning models.
 
-
 ## Analysis plan
 
 ### Problem Introduction
@@ -259,11 +258,15 @@ To ensure a fair and consistent comparison, we will apply the same feature engin
 
 For supervised models, these engineered features will be used alongside the binary target is_anomalous. For unsupervised models, the same processed features will be used without labels, allowing the models to explore underlying structure or detect anomalous patterns. This consistent preprocessing ensures that differences in performance can be attributed to the modeling approaches rather than inconsistencies in data preparation.
 
-### Q1 Supervised Learning
+### Dimensionality Reduction
+
+Our dataset currently has over 40 features, we will apply a combination of feature reduction techniques such as Principal Component Analysis (PCA), Linear Discriminant Analysis (LDA), or even use the Random Forest Classifier feature importance attribute. We'll experiment to determine the most optimal feature subset for our classification task.
+
+### Q1. Supervised Learning
 
 For the supervised learning portion of the project, we will train and evaluate models using the labeled NSL-KDD dataset to classify network traffic as normal or anomalous. Specifically, we will implement and compare a Long Short-Term Memory (LSTM) neural network and a Support Vector Machine (SVM). These models will be trained on the same feature-engineered data, using the is_anomalous column as the target. Model performance will be assessed using standard classification metrics, including accuracy, precision, recall, F1-score, and ROC AUC.
 
-### Q2 Unsupervised Learning
+### Q2. Unsupervised Learning
 
 For the unsupervised learning portion of the project, we will explore clustering-based approaches to detect anomalies in network traffic without relying on labeled data. We plan to experiment with techniques such as K-Means and DBSCAN to group similar observations and identify outliers that may correspond to attacks. After clustering, we will evaluate how well the resulting groupings align with the true labels using appropriate metrics for unsupervised learning. This will help us assess the potential of unsupervised models to detect anomalous behavior in the absence of supervision.
 
@@ -274,7 +277,7 @@ To compare the supervised and unsupervised approaches, we will evaluate their ab
 ### Project Timeline
 
 | Task Name | Status | Due | Priority | Summary |
-|-----------|-----------|-----------|-----------|------------------------------|
+|-------------|-------------|-------------|-------------|-----------------------|
 | Dataset exploration | In Progress | Week 1 | High | Load the dataset, inspect features, handle any preprocessing needs. |
 | Define research questions | Complete | Week 1 | High | Clarify goals for supervised and unsupervised anomaly detection. |
 | Supervised model development | Not Started | Week 2 | High | Train models like Random Forest, Logistic Regression, and XGBoost. |
